Orbit time graph implimented.

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
     <div id="surface-temp"></div>
     </div>
     
+    <div>
+        <div id="orbit-time"></div>
+    </div>
+    
 </body>
 </html>
