--- a/index.html
+++ b/index.html
@@ -31,5 +31,8 @@
         <div id="orbit-time"></div>
     </div>
     
+    <div>
+        <div id="radius-temp"></div>
+    </div>
 </body>
 </html>
