Problems with the scatter graph complete, all other graphs completed.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="html-file">
         <h1>The moons of Uranus</h1>
         <p>Welcome, here you will find a short but informative site to teach you a bit about the 27 moons of the 7th planet in our solar system, Uranus.</p>
         <div>
