Finishing touches all across.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <div class="row intro">
+        <div class="row intro center">
             <p>Welcome, here you will find a short but informative site to teach you a bit about the 27 moons of the 7th planet in our solar system, Uranus. As you can see from the graphs and charts displayed below,we will only be focusing on a few key features
                 and using these to try and discover some trends. The first thing to give you a rough idea of the sheer scale, see below at the pie chart measuring the radius and quantity of these moons in the mesurment of thousends of km.</p>
         </div>
@@ -64,6 +64,7 @@
             <div class="col-lg-4 col-md-6 hide-mobile chart-info hide-medium">The bar chart above displays that the most common tempretures on these moons are quite evenly distributed between 64-65 Kelvins.</div>
             <div class="col-lg-4 col-md-6 hide-mobile chart-info hide-medium">By definition of my research, the orbit durations seems to be one extreme or the other, few moons lay in the middle ground.</div>
             <div class="col-lg-4 col-md-12 hide-mobile chart-info hide-medium">By the looks of my research the orbital distance seems to be popular around the middle ground, thinning out the further it gets from its medium point.</div>
+            <div class="col-md-12 hide-mobile hide-large center">It is safe to say the the data is shown very simply, the conclusion is not only that the moons closer to Uranus have a much more intense gravity than the moons that are further out. The graphs above also show which radius, tempretures and orbit times are more popular to give you an idea of whats going on up there! </div>
         </div>
 
         <div class="footer hide-mobile">
