--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="header">
-                    <h1><i class="fas fa-moon icon-moon"></i><i class="fas fa-star star-icon"></i>The moons of Uranus<i class="fas fa-star star-icon"></i><i class="fas fa-moon icon-moon"></i></h1>
+                    <h1><i class="fas fa-moon icon-moon hide-mobile"></i><i class="fas fa-star star-icon hide-mobile"></i>The moons of Uranus<i class="fas fa-star star-icon hide-mobile"></i><i class="fas fa-moon icon-moon hide-mobile"></i></h1>
                 </div>
             </div>
         </div>
